--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ Temporary Items
 .history
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode
+
+##
+
+__pycache__/*
+.ipynb_checkpoints
